takamaka_examples/src/takamaka/tests/errors/illegaltypeforstoragefield1/NonStorage.java
package takamaka.tests.errors.illegaltypeforstoragefield1;

public class NonStorage {
}